[gd_scene load_steps=10 format=3 uid="uid://bg1v36mgndfyr"]

[ext_resource type="Script" path="res://Maps/MokiTown/HeroHome.gd" id="1"]
[ext_resource type="TileSet" path="res://TileMapsSource/Indoor(1).tres" id="2"]
[ext_resource type="PackedScene" path="res://Utilities/Stairs.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Utilities/Door.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Utilities/NPC.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://cnhd18re3hoky" path="res://Graphics/Characters/HGSS_019.png" id="6"]
[ext_resource type="PackedScene" path="res://Utilities/Event.tscn" id="7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_86cyu"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hqsl"]
size = Vector2(32, 32)

[node name="Map" type="Node2D"]
script = ExtResource("1")

[node name="BlackBG" type="ColorRect" parent="."]
visible = false
offset_left = -2500.0
offset_top = -2500.0
offset_right = 2500.0
offset_bottom = 2500.0
color = Color(0, 0, 0, 1)

[node name="Floor1" type="Node2D" parent="."]
position = Vector2(1039, 0)

[node name="TileMap1" type="TileMap" parent="Floor1"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(-6, 31, 0, -5, 31, 0, -4, 31, 0, -3, 31, 0, -2, 31, 0, -65536, 31, 0, -65535, 31, 0, -65534, 31, 0, -65533, 31, 0, -65532, 31, 0, -65531, 31, 0, -65530, 31, 0, -65528, 31, 0, -65527, 31, 0, -65526, 31, 0, -65525, 31, 0, -65524, 31, 0, -65523, 31, 0, -65522, 31, 0, -65521, 31, 0, 65530, 31, 0, 65531, 16, 0, 65532, 17, 0, 65533, 18, 0, 65534, 31, 0, 0, 31, 0, 1, 16, 0, 2, 17, 0, 3, 17, 0, 4, 17, 0, 5, 18, 0, 6, 31, 0, 8, 31, 0, 9, 16, 0, 10, 17, 0, 11, 17, 0, 12, 17, 0, 13, 17, 0, 14, 18, 0, 15, 31, 0, 131066, 31, 0, 131070, 31, 0, 65536, 31, 0, 65542, 31, 0, 65544, 31, 0, 65551, 31, 0, 196602, 31, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 31, 0, 131072, 31, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 31, 0, 131080, 31, 0, 131081, 35, 0, 131082, 35, 0, 131083, 35, 0, 131084, 35, 0, 131085, 35, 0, 131086, 35, 0, 131087, 31, 0, 262138, 31, 0, 262139, 1, 0, 262140, 0, 0, 262141, 0, 0, 262142, 16, 0, 262143, 17, 0, 196608, 18, 0, 196609, 1, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 31, 0, 196616, 31, 0, 196617, 35, 0, 196618, 34, 0, 196619, 34, 0, 196620, 34, 0, 196621, 34, 0, 196622, 34, 0, 196623, 31, 0, 327674, 31, 0, 327675, 1, 0, 327676, 0, 0, 327677, 0, 0, 262145, 1, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 31, 0, 262152, 31, 0, 262153, 35, 0, 262154, 34, 0, 262155, 34, 0, 262156, 34, 0, 262157, 34, 0, 262158, 34, 0, 262159, 31, 0, 393210, 31, 0, 393211, 1, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 31, 0, 327687, 31, 0, 327688, 31, 0, 327689, 35, 0, 327690, 34, 0, 327691, 34, 0, 327692, 34, 0, 327693, 34, 0, 327694, 34, 0, 327695, 31, 0, 458746, 31, 0, 458747, 1, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 16, 0, 393223, 17, 0, 393224, 18, 0, 393225, 35, 0, 393226, 34, 0, 393227, 34, 0, 393228, 34, 0, 393229, 34, 0, 393230, 34, 0, 393231, 31, 0, 524282, 31, 0, 524283, 1, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458761, 35, 0, 458762, 34, 0, 458763, 34, 0, 458764, 34, 0, 458765, 34, 0, 458766, 34, 0, 458767, 31, 0, 589818, 31, 0, 589819, 1, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 34, 0, 524298, 34, 0, 524299, 34, 0, 524300, 34, 0, 524301, 34, 0, 524302, 34, 0, 524303, 31, 0, 655354, 31, 0, 655355, 1, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 34, 0, 589834, 34, 0, 589835, 34, 0, 589836, 34, 0, 589837, 34, 0, 589838, 34, 0, 589839, 31, 0, 720890, 31, 0, 720891, 31, 0, 720892, 31, 0, 720893, 31, 0, 720894, 31, 0, 720895, 31, 0, 655360, 31, 0, 655361, 31, 0, 655363, 31, 0, 655364, 31, 0, 655365, 31, 0, 655366, 31, 0, 655367, 31, 0, 655368, 31, 0, 655369, 31, 0, 655370, 31, 0, 655371, 31, 0, 655372, 31, 0, 655373, 31, 0, 655374, 31, 0, 655375, 31, 0)

[node name="TileMap2" type="TileMap" parent="Floor1"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 27, 0, 3, 27, 0, 5, 65575, 0, 11, 27, 0, 12, 27, 0, 131067, 29, 0, 131069, 28, 0, 65537, 22, 0, 65538, 23, 0, 65540, 39, 1, 65541, 65575, 1, 65545, 36, 0, 65549, 37, 0, 65550, 38, 0, 131076, 39, 2, 131077, 65575, 2, 262142, 20, 0, 196608, 26, 0, 196612, 39, 3, 196613, 65575, 3, 196618, 40, 0, 196619, 65576, 0, 196620, 65576, 0, 196621, 65576, 0, 196622, 41, 0, 262154, 40, 1, 262155, 65576, 1, 262156, 65576, 1, 262157, 65576, 1, 262158, 41, 1, 327690, 40, 1, 327691, 65576, 1, 327692, 65576, 1, 327693, 65576, 1, 327694, 41, 1, 458747, 3, 0, 458748, 4, 0, 458749, 4, 0, 458750, 4, 0, 458751, 5, 0, 393226, 40, 1, 393227, 65576, 1, 393228, 65576, 1, 393229, 65576, 1, 393230, 41, 1, 524283, 6, 0, 524284, 7, 0, 524285, 7, 0, 524286, 7, 0, 524287, 8, 0, 458762, 40, 2, 458763, 65576, 2, 458764, 65576, 2, 458765, 65576, 2, 458766, 41, 2, 589819, 6, 0, 589820, 7, 0, 589821, 7, 0, 589822, 7, 0, 589823, 8, 0, 655355, 9, 0, 655356, 10, 0, 655357, 10, 0, 655358, 10, 0, 655359, 30, 0, 589825, 44, 0, 589826, 65580, 0, 589827, 131116, 0, 589838, 32, 0)

[node name="TileMap3" type="TileMap" parent="Floor1"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(262155, 42, 0, 262156, 65578, 0, 262157, 131114, 0, 327691, 42, 1, 327692, 65578, 1, 327693, 131114, 1, 393223, 25, 0, 393227, 42, 2, 393228, 65578, 2, 393229, 131114, 2, 524283, 15, 0, 524284, 21, 0, 524286, 15, 0, 589819, 15, 0, 589822, 15, 0)

[node name="BedBlanket" type="TileMap" parent="Floor1"]
z_index = 9
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(327691, 42, 3, 327692, 65578, 3, 327693, 131114, 3)

[node name="Floor2" type="Node2D" parent="."]
position = Vector2(16, 0)

[node name="TileMap1" type="TileMap" parent="Floor2"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 31, 0, -65536, 31, 0, -65535, 31, 0, -65534, 31, 0, -65533, 31, 0, -65532, 31, 0, -65531, 31, 0, -65530, 31, 0, -65529, 31, 0, -65528, 31, 0, -65527, 31, 0, -65526, 31, 0, 65535, 31, 0, 0, 16, 0, 1, 17, 0, 2, 17, 0, 3, 17, 0, 4, 17, 0, 5, 17, 0, 6, 17, 0, 7, 17, 0, 8, 17, 0, 9, 18, 0, 10, 31, 0, 131071, 31, 0, 65546, 31, 0, 196607, 31, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 31, 0, 262143, 31, 0, 196608, 1, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 31, 0, 327679, 31, 0, 262144, 1, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 31, 0, 393215, 31, 0, 327680, 1, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 31, 0, 458751, 31, 0, 393216, 1, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 31, 0, 524287, 31, 0, 458752, 31, 0, 458753, 31, 0, 458754, 31, 0, 458755, 31, 0, 458756, 31, 0, 458757, 31, 0, 458758, 31, 0, 458759, 31, 0, 458760, 31, 0, 458761, 31, 0, 458762, 31, 0)

[node name="TileMap2" type="TileMap" parent="Floor2"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(131075, 3, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 5, 0, 196611, 6, 0, 196612, 7, 0, 196613, 7, 0, 196614, 7, 0, 196615, 8, 0, 262147, 6, 0, 262148, 7, 0, 262149, 7, 0, 262150, 7, 0, 262151, 8, 0, 327683, 9, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 0, 327687, 30, 0)

[node name="TileMap3" type="TileMap" parent="Floor2"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(262148, 15, 0, 262149, 15, 0, 327680, 15, 0)

[node name="TileMap4" type="TileMap" parent="Floor2"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(2, 19, 0, 65536, 24, 0, 65540, 11, 0, 65542, 13, 0, 65544, 14, 0, 196608, 2, 0, 196612, 12, 0, 393225, 32, 0)

[node name="TileMap5" type="TileMap" parent="Floor2"]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(327689, 33, 0, 524334, 33, 0)

[node name="Console" type="StaticBody2D" parent="Floor2"]
position = Vector2(144, 112)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2/Console"]
shape = SubResource("RectangleShape2D_86cyu")

[node name="TV" type="StaticBody2D" parent="Floor2"]
position = Vector2(176, 80)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2/TV"]
shape = SubResource("RectangleShape2D_5hqsl")

[node name="TV2" type="StaticBody2D" parent="Floor2"]
position = Vector2(144, 80)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2/TV2"]
shape = SubResource("RectangleShape2D_5hqsl")

[node name="Shelf" type="StaticBody2D" parent="Floor2"]
position = Vector2(304, 80)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2/Shelf"]
shape = SubResource("RectangleShape2D_5hqsl")

[node name="Shelf2" type="StaticBody2D" parent="Floor2"]
position = Vector2(272, 80)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2/Shelf2"]
shape = SubResource("RectangleShape2D_5hqsl")

[node name="Aunt" parent="." instance=ExtResource("5")]
position = Vector2(928, 112)
texture = ExtResource("6")

[node name="Outside" parent="." instance=ExtResource("4")]
position = Vector2(1120, 336)
scene_destination = "res://Maps/MokiTown/Moki Town.tscn"
location = Vector2(912, 1008)
exterior = false

[node name="UpStairs" parent="." instance=ExtResource("3")]
position = Vector2(1184, 80)
destination = Vector2(64, 80)
dir = "Up"

[node name="DownStairs" parent="." instance=ExtResource("3")]
position = Vector2(64, 80)
destination = Vector2(1184, 80)
dir = "Down"

[node name="Block" parent="." instance=ExtResource("7")]
position = Vector2(1120, 304)
custom_size = Vector2(0, 0)
custom_offset = Vector2(0, 0)

[connection signal="area_entered" from="Block" to="." method="block"]
